--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
@@ -10,44 +11,5 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.hisham.navview.MainActivity"
     tools:showIn="@layout/app_bar_main">
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/btnGetUrl"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:src="@android:drawable/ic_input_get" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/btnPostToServer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:src="@android:drawable/ic_popup_sync" />
-    </LinearLayout>
-
-
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/txtResponse"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            android:text="Response will show here"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-    </ScrollView>
-
 
 </LinearLayout>
